--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ a {
 /*ヘッダーの設定*/
 header {
   width: 100%;
-  height: 11%;
+  height: 4.5rem;
   background-color: rgba(34, 39, 52, 0.9);
   position: fixed;
   top: 0;
